PFC/Yocto_Infor/yocto_TXT/output_976.txt
* [meta-security][dunfell][PATCH] libtpm: update to 0.7.2
@ 2023-02-06 15:09 Armin Kuster
  0 siblings, 0 replies; only message in thread
From: Armin Kuster @ 2023-02-06 15:09 UTC (permalink / raw)
  To: yocto

Signed-off-by: Armin Kuster <akuster808@gmail.com>
(cherry picked from commit 3cd65d96c1e880d378eab070ad6ae164525b78c6)
[Buf fix update only also fixes a build issue
Fixes tpm12/tpm_nvfile.c:347:27: error: ‘%02lx’ directive writing between 2 and 8 bytes into a region of size between 0 and 4095 [-Werror=format-overflow=]
]
Signed-off-by: Armin Kuster <akuster808@gmail.com>
---
 .../recipes-tpm/libtpm/{libtpm_0.7.0.bb => libtpm_0.7.2.bb}   | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 rename meta-tpm/recipes-tpm/libtpm/{libtpm_0.7.0.bb => libtpm_0.7.2.bb} (86%)

diff --git a/meta-tpm/recipes-tpm/libtpm/libtpm_0.7.0.bb b/meta-tpm/recipes-tpm/libtpm/libtpm_0.7.2.bb
similarity index 86%
rename from meta-tpm/recipes-tpm/libtpm/libtpm_0.7.0.bb
rename to meta-tpm/recipes-tpm/libtpm/libtpm_0.7.2.bb
index 4588c8d..0ade01d 100644
--- a/meta-tpm/recipes-tpm/libtpm/libtpm_0.7.0.bb
+++ b/meta-tpm/recipes-tpm/libtpm/libtpm_0.7.2.bb
@@ -2,8 +2,8 @@ SUMMARY = "LIBPM - Software TPM Library"
 LICENSE = "BSD-3-Clause"
 LIC_FILES_CHKSUM = "file://LICENSE;md5=e73f0786a936da3814896df06ad225a9"
 
-SRCREV = "c26e8f7b08b19a69cea9e8f1f1e6639c7951fb01"
-SRC_URI = "git://github.com/stefanberger/libtpms.git;branch=stable-${PV}"
+SRCREV = "7325acb4777f70419fe10a1d9621c2666e977e73"
+SRC_URI = "git://github.com/stefanberger/libtpms.git;branch=stable-0.7.0"
 
 PE = "1"
 
-- 
2.31.1



^ permalink raw reply related	[flat|nested] only message in thread
only message in thread, other threads:[~2023-02-06 15:11 UTC | newest]

Thread overview: (only message) (download: mbox.gz / follow: Atom feed)
-- links below jump to the message on this page --
2023-02-06 15:09 [meta-security][dunfell][PATCH] libtpm: update to 0.7.2 Armin Kuster

